Fix avatar on small screens

--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,18 @@ li::before {
 #container p {
     margin-left: 1em;
 }
+
+@media (max-width: 600px) {
+    #container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #container p {
+        margin-left: 0;
+    }
+
+    #container img {
+        width: 150px;
+    }
+}
